--- a/home.html
+++ b/home.html
@@ -1,20 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">/
-<div id="page">
+<html lang="en" id="page">
 
-    <head>
 
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<head>
 
-        <link rel="stylesheet" href="css/master.css">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-        <title>Campbell County Fire District 1 | Home</title>
-    </head>
+    <link rel="stylesheet" href="css/master.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-    <body>
+    <title>Campbell County Fire District 1 | Home</title>
+</head>
 
-    </body>
-</div>
+<body>
+    <div class="d-flex justify-flex-outside flex-row top-bar">
+        <div class="d-flex flex-column">
+            <a href="#"><img src="images/logo.png" alt="logo" id="logo-img"></a>
+            <h1 class="display-4">Campbell County Fire Disrict One</h1>
+        </div>
+        <ul class="navbar">
+            <li>
+
+            </li>
+            <li>
+
+            </li>
+            <li>
+
+            </li>
+        </ul>
+
+
+
+    </div>
+</body>
+
 
 </html>
