--- a/home.html
+++ b/home.html
@@ -14,19 +14,20 @@
 
 <body>
     <div class="d-flex justify-flex-outside flex-row top-bar">
-        <div class="d-flex flex-column">
+        <div class="d-flex flex-row">
             <a href="#"><img src="images/logo.png" alt="logo" id="logo-img"></a>
             <h1 class="display-4">Campbell County Fire Disrict One</h1>
         </div>
         <ul class="navbar">
             <li>
+                <a href=""></a>
 
             </li>
             <li>
-
+                <a href=""></a>
             </li>
             <li>
-
+                <a href=""></a>
             </li>
         </ul>
 
