added navbar and styling for it

--- a/home.html
+++ b/home.html
@@ -13,26 +13,39 @@
 </head>
 
 <body>
-    <div class="d-flex justify-flex-outside flex-row top-bar">
-        <div class="d-flex flex-row">
-            <a href="#"><img src="images/logo.png" alt="logo" id="logo-img"></a>
-            <h1 class="display-4">Campbell County Fire Disrict One</h1>
+    <div id="page">
+        <div class="sticky">
+            <img src="images/logo.png" alt="logo">
+            <ul id="navbar">
+                <li class="nav-item">
+                    <a href="" class="nav-item-link">home</a>
+                </li>
+                <li class="nav-item">
+                    <a href="" class="nav-item-link">about</a>
+                </li>
+                <li class="nav-item">
+                    <a href="" class="nav-item-link">burn permits</a>
+                </li>
+                <li class="nav-item">
+                    <a href="" class="nav-item-link">news and events</a>
+                </li>
+                <li class="nav-item">
+                    <a href="" class="nav-item-link">public education</a>
+                </li>
+                <li class="nav-item">
+                    <a href="" class="nav-item-link">join our team</a>
+                </li>
+                <li class="nav-item">
+                    <a href="" class="nav-item-link">smart 911</a>
+                </li>
+                <li class="nav-item">
+                    <a href="" class="nav-item-link">locations</a>
+                </li>
+                <li class="nav-item">
+                    <a href="" class="nav-item-link">contact us</a>
+                </li>
+            </ul>
         </div>
-        <ul class="navbar">
-            <li>
-                <a href=""></a>
-
-            </li>
-            <li>
-                <a href=""></a>
-            </li>
-            <li>
-                <a href=""></a>
-            </li>
-        </ul>
-
-
-
     </div>
 </body>
 
