--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,9 @@
 <body>
     <div id="page">
         <div class="sticky">
-            <img src="images/logo.png" alt="logo">
+            <div id="logo-img">
+                <img src="images/logo.png" alt="logo">
+            </div>
             <ul id="navbar">
                 <li class="nav-item">
                     <a href="home.html" class="nav-item-link">home</a>
@@ -47,6 +49,7 @@
             </ul>
         </div>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </body>
 
 </html>
