added id for bg img and text resizes to fit screen

--- a/public-education.html
+++ b/public-education.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" id="bg-img">
 
 <head>
     <meta charset="UTF-8">
@@ -48,6 +48,9 @@
                 </li>
             </ul>
         </div>
+        <footer>
+
+        </footer>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </body>
