--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/master.css">
+    <link rel="stylesheet" href="css/contact.css">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
@@ -19,37 +20,42 @@
             </div>
             <ul id="navbar">
                 <li class="nav-item">
-                    <a href="home.html" class="nav-item-link">home</a>
+                    <a href="home.html" class="nav-item-link white-text">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a href="about.html" class="nav-item-link">about</a>
+                    <a href="about.html" class="nav-item-link white-text">About</a>
                 </li>
                 <li class="nav-item">
-                    <a href="burn-permits.html" class="nav-item-link">burn permits</a>
+                    <a href="burn-permits.html" class="nav-item-link white-text">Burn Permits</a>
                 </li>
                 <li class="nav-item">
-                    <a href="news-and-events.html" class="nav-item-link">news and events</a>
+                    <a href="news-and-events.html" class="nav-item-link white-text">News and Events</a>
                 </li>
                 <li class="nav-item">
-                    <a href="public-education.html" class="nav-item-link">public education</a>
+                    <a href="public-education.html" class="nav-item-link white-text">Public Education</a>
                 </li>
                 <li class="nav-item">
-                    <a href="join.html" class="nav-item-link">join our team</a>
+                    <a href="join.html" class="nav-item-link white-text">Join Our Team</a>
                 </li>
                 <!-- <li class="nav-item"> -->
                 <!-- <a href="" class="nav-item-link">smart 911</a> -->
                 <!-- </li> -->
                 <!-- make this info on the home page because it links to an external site -->
                 <li class="nav-item">
-                    <a href="" class="nav-item-link">members portal</a>
+                    <a href="" class="nav-item-link white-text">Members Portal</a>
                 </li>
                 <li class="nav-item">
-                    <a href="contact.html" class="nav-item-link">contact us</a>
+                    <a href="contact.html" class="nav-item-link white-text">Contact Us</a>
                 </li>
             </ul>
         </div>
+        <div id="filler">&nsbp</div>
+        <div id="content">
+            <h1 class="display-3 white-text">Contact Us</h1>
+        </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="js/scripts.js"></script>
 </body>
 
 </html>
