--- a/burn-permits.html
+++ b/burn-permits.html
@@ -19,32 +19,32 @@
             </div>
             <ul id="navbar">
                 <li class="nav-item">
-                    <a href="home.html" class="nav-item-link">home</a>
+                    <a href="home.html" class="nav-item-link white-text">home</a>
                 </li>
                 <li class="nav-item">
-                    <a href="about.html" class="nav-item-link">about</a>
+                    <a href="about.html" class="nav-item-link white-text">about</a>
                 </li>
                 <li class="nav-item">
-                    <a href="burn-permits.html" class="nav-item-link">burn permits</a>
+                    <a href="burn-permits.html" class="nav-item-link white-text">burn permits</a>
                 </li>
                 <li class="nav-item">
-                    <a href="news-and-events.html" class="nav-item-link">news and events</a>
+                    <a href="news-and-events.html" class="nav-item-link white-text">news and events</a>
                 </li>
                 <li class="nav-item">
-                    <a href="public-education.html" class="nav-item-link">public education</a>
+                    <a href="public-education.html" class="nav-item-link white-text">public education</a>
                 </li>
                 <li class="nav-item">
-                    <a href="join.html" class="nav-item-link">join our team</a>
+                    <a href="join.html" class="nav-item-link white-text">join our team</a>
                 </li>
                 <!-- <li class="nav-item"> -->
                 <!-- <a href="" class="nav-item-link">smart 911</a> -->
                 <!-- </li> -->
                 <!-- make this info on the home page because it links to an external site -->
                 <li class="nav-item">
-                    <a href="" class="nav-item-link">members portal</a>
+                    <a href="" class="nav-item-link white-text">members portal</a>
                 </li>
                 <li class="nav-item">
-                    <a href="contact.html" class="nav-item-link">contact us</a>
+                    <a href="contact.html" class="nav-item-link white-text">contact us</a>
                 </li>
             </ul>
         </div>
