made the navbar look better

--- a/contact.html
+++ b/contact.html
@@ -19,37 +19,53 @@
                 <img src="images/logo.png" alt="logo">
             </div>
             <ul id="navbar">
-                <li class="nav-item">
-                    <a href="home.html" class="nav-item-link white-text">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a href="about.html" class="nav-item-link white-text">About</a>
-                </li>
-                <li class="nav-item">
-                    <a href="burn-permits.html" class="nav-item-link white-text">Burn Permits</a>
-                </li>
-                <li class="nav-item">
-                    <a href="news-and-events.html" class="nav-item-link white-text">News and Events</a>
-                </li>
-                <li class="nav-item">
-                    <a href="public-education.html" class="nav-item-link white-text">Public Education</a>
-                </li>
-                <li class="nav-item">
-                    <a href="join.html" class="nav-item-link white-text">Join Our Team</a>
-                </li>
+                <a href="home.html" class="nav-item-link white-text">
+                    <li class="nav-item">
+                        Home
+                    </li>
+                </a>
+                <a href="about.html" class="nav-item-link white-text">
+                    <li class="nav-item">
+                        About
+                    </li>
+                </a>
+                <a href="burn-permits.html" class="nav-item-link white-text">
+                    <li class="nav-item">
+                        Burn Permits
+                    </li>
+                </a>
+                <a href="news-and-events.html" class="nav-item-link white-text">
+                    <li class="nav-item">
+                        News and Events
+                    </li>
+                </a>
+                <a href="public-education.html" class="nav-item-link white-text">
+                    <li class="nav-item">
+                        Public Education
+                    </li>
+                </a>
+                <a href="join.html" class="nav-item-link white-text">
+                    <li class="nav-item">
+                        Join Our Team
+                    </li>
+                </a>
                 <!-- <li class="nav-item"> -->
                 <!-- <a href="" class="nav-item-link">smart 911</a> -->
                 <!-- </li> -->
                 <!-- make this info on the home page because it links to an external site -->
-                <li class="nav-item">
-                    <a href="" class="nav-item-link white-text">Members Portal</a>
-                </li>
-                <li class="nav-item">
-                    <a href="contact.html" class="nav-item-link white-text">Contact Us</a>
-                </li>
+                <a href="" class="nav-item-link white-text">
+                    <li class="nav-item">
+                        Members Portal
+                    </li>
+                </a>
+                <a href="contact.html" class="nav-item-link white-text">
+                    <li class="nav-item">
+                        Contact Us
+                    </li>
+                </a>
             </ul>
         </div>
-        <div id="filler">&nsbp</div>
+
         <div id="content">
             <h1 class="display-3 white-text">Contact Us</h1>
         </div>
