fixed the navbar

--- a/contact.html
+++ b/contact.html
@@ -19,32 +19,32 @@
                 <img src="images/logo.png" alt="logo">
             </div>
             <ul id="navbar">
-                <a href="home.html" class="nav-item-link white-text">
+                <a href="home.html" class="nav-item-link">
                     <li class="nav-item">
                         Home
                     </li>
                 </a>
-                <a href="about.html" class="nav-item-link white-text">
+                <a href="about.html" class="nav-item-link">
                     <li class="nav-item">
                         About
                     </li>
                 </a>
-                <a href="burn-permits.html" class="nav-item-link white-text">
+                <a href="burn-permits.html" class="nav-item-link">
                     <li class="nav-item">
                         Burn Permits
                     </li>
                 </a>
-                <a href="news-and-events.html" class="nav-item-link white-text">
+                <a href="news-and-events.html" class="nav-item-link">
                     <li class="nav-item">
                         News and Events
                     </li>
                 </a>
-                <a href="public-education.html" class="nav-item-link white-text">
+                <a href="public-education.html" class="nav-item-link">
                     <li class="nav-item">
                         Public Education
                     </li>
                 </a>
-                <a href="join.html" class="nav-item-link white-text">
+                <a href="join.html" class="nav-item-link">
                     <li class="nav-item">
                         Join Our Team
                     </li>
@@ -53,12 +53,12 @@
                 <!-- <a href="" class="nav-item-link">smart 911</a> -->
                 <!-- </li> -->
                 <!-- make this info on the home page because it links to an external site -->
-                <a href="" class="nav-item-link white-text">
+                <a href="" class="nav-item-link">
                     <li class="nav-item">
                         Members Portal
                     </li>
                 </a>
-                <a href="contact.html" class="nav-item-link white-text">
+                <a href="contact.html" class="nav-item-link">
                     <li class="nav-item">
                         Contact Us
                     </li>
@@ -67,7 +67,7 @@
         </div>
 
         <div id="content">
-            <h1 class="display-3 white-text">Contact Us</h1>
+            <h1 class="display-3">Contact Us</h1>
         </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
