--- a/home.html
+++ b/home.html
@@ -18,34 +18,50 @@
                 <img src="images/logo.png" alt="logo">
             </div>
             <ul id="navbar">
-                <li class="nav-item">
-                    <a href="home.html" class="nav-item-link">home</a>
-                </li>
-                <li class="nav-item">
-                    <a href="about.html" class="nav-item-link">about</a>
-                </li>
-                <li class="nav-item">
-                    <a href="burn-permits.html" class="nav-item-link">burn permits</a>
-                </li>
-                <li class="nav-item">
-                    <a href="news-and-events.html" class="nav-item-link">news and events</a>
-                </li>
-                <li class="nav-item">
-                    <a href="public-education.html" class="nav-item-link">public education</a>
-                </li>
-                <li class="nav-item">
-                    <a href="join.html" class="nav-item-link">join our team</a>
-                </li>
+                <a href="home.html" class="nav-item-link">
+                    <li class="nav-item">
+                        Home
+                    </li>
+                </a>
+                <a href="about.html" class="nav-item-link">
+                    <li class="nav-item">
+                        About
+                    </li>
+                </a>
+                <a href="burn-permits.html" class="nav-item-link">
+                    <li class="nav-item">
+                        Burn Permits
+                    </li>
+                </a>
+                <a href="news-and-events.html" class="nav-item-link">
+                    <li class="nav-item">
+                        News and Events
+                    </li>
+                </a>
+                <a href="public-education.html" class="nav-item-link">
+                    <li class="nav-item">
+                        Public Education
+                    </li>
+                </a>
+                <a href="join.html" class="nav-item-link">
+                    <li class="nav-item">
+                        Join our Team
+                    </li>
+                </a>
                 <!-- <li class="nav-item"> -->
                 <!-- <a href="" class="nav-item-link">smart 911</a> -->
                 <!-- </li> -->
                 <!-- make this info on the home page because it links to an external site -->
-                <li class="nav-item">
-                    <a href="" class="nav-item-link">members portal</a>
-                </li>
-                <li class="nav-item">
-                    <a href="contact.html" class="nav-item-link">contact us</a>
-                </li>
+                <a href="" class="nav-item-link">
+                    <li class="nav-item">
+                        Members Portal
+                    </li>
+                </a>
+                <a href="contact.html" class="nav-item-link">
+                    <li class="nav-item">
+                        Contact Us
+                    </li>
+                </a>
             </ul>
         </div>
     </div>
