fixed capitalization on "our"

--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
                 </a>
                 <a href="join.html" class="nav-item-link">
                     <li class="nav-item">
-                        Join Our Team
+                        Join our Team
                     </li>
                 </a>
                 <!-- <li class="nav-item"> -->
