added map to contact page

--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/master.css">
     <link rel="stylesheet" href="css/contact.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
+
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
@@ -67,11 +70,26 @@
         </div>
 
         <div id="content">
-            <h1 class="display-3">Contact Us</h1>
+            <h1 id="header">Contact Us</h1>
+            <div id="maptext">
+                <div id="map"></div>
+                <div id="text">
+                    <h1 class="body-header">Address:</h1>
+                    <p class="body-text">
+                        6844 12 Mile Road, Melbourne, KY, 41059
+                    </p>
+                    <h1 class="body-header">Email:</h1>
+                    <p class="body-text">CCFD1admin@ccfd1ky.com</p>
+                    <h1 class="body-header">Phone:</h1>
+                    <p class="body-text">(859) 635-9255</p>
+                    <p>Contact EMS Chief Patsy Parker at pparker@ccfd1ky.com</p>
+                </div>
+            </div>
         </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/scripts.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD6jPIgbrnIotNFAvTGHzRYuaTaL7OoyEU&callback=initMap&libraries=&v=weekly" defer></script>
 </body>
 
 </html>
