finished contact.html and public-education.html

--- a/contact.html
+++ b/contact.html
@@ -8,8 +8,6 @@
     <link rel="stylesheet" href="css/contact.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
-
-
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
     <title>Contact Us</title>
@@ -74,15 +72,18 @@
             <div id="maptext">
                 <div id="map"></div>
                 <div id="text">
-                    <h1 class="body-header">Address:</h1>
+                    <h1 class="body-header">Address</h1>
                     <p class="body-text">
                         6844 12 Mile Road, Melbourne, KY, 41059
                     </p>
-                    <h1 class="body-header">Email:</h1>
-                    <p class="body-text">CCFD1admin@ccfd1ky.com</p>
-                    <h1 class="body-header">Phone:</h1>
+                    <h1 class="body-header">Email</h1>
+                    <p class="body-text"><a href="mailto:ccfd1admin@ccfd1ky.com" id="email">CCFD1admin@ccfd1ky.com</a></p>
+                    <h1 class="body-header">Phone</h1>
                     <p class="body-text">(859) 635-9255</p>
-                    <p>Contact EMS Chief Patsy Parker at pparker@ccfd1ky.com</p>
+                    <h1 class="body-header">EMS Chief Patsy Parker</h1>
+                    <p class="body-text">
+                        <a href="mailto:pparker@ccfd1ky.com" id="email">pparker@ccfd1ky.com</a>
+                    </p>
                 </div>
             </div>
         </div>
