--- a/public-education.html
+++ b/public-education.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/master.css">
-
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/public-ed.css">
 
     <title>Public Education</title>
 </head>
@@ -64,9 +65,43 @@
                 </a>
             </ul>
         </div>
-        <footer>
-
-        </footer>
+        <div id="content">
+            <h1 id="header">Public Education</h1>
+            <p class="body-text">The Kentucky Department for Public Health (KDPH) is responding actively to the COVID-19 situation. Our State Health Operations Center is operating at Level 1, its highest activation level. This respiratory disease was first detected in a Kentucky
+                resident on March 6, 2020.</p>
+            <p class="body-text">For the latest information on Kentucky's response to the COVID-19 situation please visit <a id="dumb-link" href="https://govstatus.egov.com/kycovid19">https://govstatus.egov.com/kycovid19</a></p>
+            <img src="images/public-ed/covid guidance.jpg" alt="covid-guidance" id="covid-image">
+            <hr>
+            <div id="content-2">
+                <h1 class="body-header">
+                    Fall Safety
+                </h1>
+                <p class="body-text">Fall is finally here! Fall usually means cooler temperatures and changes of color in the leaves. Here are some safety tips for this upcoming Fall season!</p>
+                <ul>
+                    <li class="body-text">
+                        <b>Be safe on Halloween.</b> Pedestrian and bicycle traffic significantly increases on and around Halloween. According to the National Safety Council, about 6,100 pedestrian deaths occurred in 2013. Their research also found that
+                        these deaths varied by age. Running into the road accounted for about 70 percent of pedestrian deaths or injuries for children ages 5-9 and about 47 percent for those ages 10-14. Adults should accompany young children while trick-or-treating.
+                        For older children going out alone, make sure an adult knows the route they’re going to take and give them a curfew. Trick-or-treaters should only approach familiar houses with the porch light on and should never, ever enter a
+                        stranger’s home.
+                    </li>
+                    <li class="body-text">
+                        <b>Change smoke alarm batteries.</b> The batteries should be changed twice per year. Many people use Daylight Savings Time as an easy way to remember to change smoke alarm and carbon monoxide detector batteries.
+                    </li>
+                    <li class="body-text">
+                        <b>Make sure your heater is working.</b> Before it gets too chilly, turn it on to test and make sure it sufficiently heats up your house. If it seems weak or isn’t working at all, call a professional. You don’t want to get stuck
+                        in a bind when the weather hits freezing temperatures.
+                    </li>
+                    <li class="body-text">
+                        <b>Be careful with space heaters.</b> They may be small, but they pack a powerful punch, able to heat one area or room on their own. Make sure there is plenty of space around the heater so it can vent and you don’t want it to accidentally
+                        set something close to it on fire. Don’t leave a space heater unattended.
+                    </li>
+                    <li class="body-text">
+                        <b>Watch for poor weather conditions while driving.</b> Rain, snow, fog, ice, and wet leaves are only a few dangers you may encounter on the road over the next few months. Roads can become slippery and visibility decreases in poor
+                        conditions, making pedestrians, bicycles, animals, and road signs hard to see.
+                    </li>
+                </ul>
+            </div>
+        </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </body>
