added home.html and join.html

--- a/join.html
+++ b/join.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/master.css">
+    <link rel="stylesheet" href="css/kessinger.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
@@ -63,6 +65,34 @@
                     </li>
                 </a>
             </ul>
+        </div>
+    </div>
+
+    <div id="content">
+        <h1 id="header">Join our Team!</h1>
+        <p class="body-text">Looking for compassionate, enthusiastic and motivated people to join our team. Being a volunteer or joining as an employee is a rewarding way to give back to your community. If you are interested, stop by one of our stations and talk to the guys
+            and gals on our team to get more information on how you can serve your community in the fire service. Apply today by clicking the button below for our volunteer or employment application. Fill out and complete the application and return it
+            to one of our stations.
+        </p>
+
+        <div class="row">
+            <div class="col-sm">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title body-header">Volunteer Form</h5>
+                        <a href="documents/membershipApplication.pdf" download class="btn btn-danger">Download File</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-sm">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title body-header">Employment Form</h5>
+                        <a href="documents/employmentApplication.pdf" download class="btn btn-danger">Download File</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
