--- a/home.html
+++ b/home.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/master.css">
+    <link rel="stylesheet" href="css/kessinger.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
@@ -64,8 +66,85 @@
                 </a>
             </ul>
         </div>
+        <div id="content">
+            <h1 id="header">Home</h1>
+            <div class="alert alert-warning alert-dismissable fade show" role="alert">
+                Check out our Public Education page for the lastest information on COVID-19! Please stay safe!
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="jumbotron customJum">
+                <h1 class="display-4 body-header">Campbell County Fire District 1</h1>
+                <p class="lead body-text">"When a man becomes a fireman his greatest act of bravery has been accomplished. What he does after that is all in the line of work."</p>
+                <p>-Chief Edward F. Croker</p>
+                <p class="lead body-text">
+                    <a class="btn btn-warning btn-lg" href="contract.html" role="button">Contact Us</a>
+                </p>
+            </div>
+
+            <div class="row">
+                <div class="col-sm">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title body-header">Interested in Volunteering?</h5>
+                            <p class="card-text body-text">Fill our the form below and return it to one of our stations!</p>
+                            <a href="documents/membershipApplication.pdf" download class="btn btn-danger">Download File</a>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title body-header">Public Education</h5>
+                            <p class="card-text body-text">Click on the link below for the latest information on COVID-19 and other important information!</p>
+                            <a href="documents/membershipApplication.pdf" download class="btn btn-danger">Public Ed. Link</a>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="col-sm">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title body-header">Locations</h5>
+                            <p class="card-text body-text">Station 51: 5011 Four Mile Road, Silver Grove, KY 41085</p>
+                            <p class="card-tex body-text">Phone Number: (859) 441-6251</p>
+                            <p class="card-text body-text">Station 52: 3707 Smith Road, California, KY 41007</p>
+                            <p class="card-text body-text">Phone Number: (859) 635-4196</p>
+                            <p class="card-text body-text">Station 53: 6844 Four Mile Road, Melbourne, KY 41059</p>
+                            <p class="card-text body-text">Phone Number: (859) 635-9255</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title body-header">Smart911</h5>
+                            <p class="card-text body-text">Consider signing up for Smart911. When you call 911 after signing up, the 911 operators will be able to automatically view essential information such as your address, medical information, or home information. You can provide
+                                as much infor as you want!.</p>
+                            <a href="https://www.smart911.com/" class="btn btn-danger">Smart911 Link</a>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title body-header">Wanting a Job?</h5>
+                            <p class="card-text body-text">Fill our the form below and enjoy a career of serving the community!</p>
+                            <a href="documents/employmentApplication.pdf" download class="btn btn-danger">Download File</a>
+                        </div>
+                    </div>
+                </div>
+
+
+
+            </div>
+
+        </div>
     </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 
 </html>
