--- a/home.html
+++ b/home.html
@@ -122,7 +122,7 @@
                         <div class="card-body">
                             <h5 class="card-title body-header">Smart911</h5>
                             <p class="card-text body-text">Consider signing up for Smart911. When you call 911 after signing up, the 911 operators will be able to automatically view essential information such as your address, medical information, or home information. You can provide
-                                as much infor as you want!.</p>
+                                as much or as little information as you want.</p>
                             <a href="https://www.smart911.com/" class="btn btn-danger">Smart911 Link</a>
                         </div>
                     </div>
