--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
                 <!-- <a href="" class="nav-item-link">smart 911</a> -->
                 <!-- </li> -->
                 <!-- make this info on the home page because it links to an external site -->
-                <a href="" class="nav-item-link">
+                <a href="member-portal.html" class="nav-item-link">
                     <li class="nav-item">
                         Members Portal
                     </li>
@@ -72,17 +72,15 @@
             <div id="maptext">
                 <div id="map"></div>
                 <div id="text">
-                    <h1 class="body-header">Address</h1>
-                    <p class="body-text">
-                        6844 12 Mile Road, Melbourne, KY, 41059
-                    </p>
                     <h1 class="body-header">Email</h1>
                     <p class="body-text"><a href="mailto:ccfd1admin@ccfd1ky.com" id="email">CCFD1admin@ccfd1ky.com</a></p>
-                    <h1 class="body-header">Phone</h1>
-                    <p class="body-text">(859) 635-9255</p>
                     <h1 class="body-header">EMS Chief Patsy Parker</h1>
                     <p class="body-text">
                         <a href="mailto:pparker@ccfd1ky.com" id="email">pparker@ccfd1ky.com</a>
+                    </p>
+                    <h1 class="body-header">Our Locations</h1>
+                    <p class="body-text"><b>Station 51</b><br>5011 Four Mile Road, Silver Grove, KY 41085 - (859) 441-6251<br><b>Station 52</b><br>3707 Smith Road, California, KY 41007 - (859) 635-4196<br><b>Station 53</b><br>6844 Four Mile Road, Melbourne, KY 41059 - (859)
+                        635-9255
                     </p>
                 </div>
             </div>
