--- a/member-portal.html
+++ b/member-portal.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/master.css">
-
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/member-portal.css">
 
-    <title>About</title>
+    <title>Employee Portal</title>
 </head>
 
 <body>
@@ -64,8 +65,48 @@
                 </a>
             </ul>
         </div>
+        <div id="content">
+            <h1 id="header">Employee Portal</h1>
+            <hr>
+            <h1 class="body-header">Office Login</h1>
+            <p class="body-text">To access your office 365 Account, click the button below.
+                <ul>
+                    <li class="body-text">Microsoft (Word, Excel, etc.)</li>
+                    <li class="body-text">OneDrive</li>
+                    <li class="body-text">Sharepoint</li>
+                    <li class="body-text">Email</li>
+                </ul>
+            </p>
+            <a href="https://www.office.com" class="btn btn-info btn-width body-text">Office Link</a>
+            <hr>
+            <h1 class="body-header">ESO</h1>
+            <p class="body-text">To Access ESO EMS Solutions webpage, click on the button below.
+                <ul>
+                    <li class="body-text">EMS Reporting</li>
+                </ul>
+            </p>
+            <a href="http://www.esosuite.net" class="btn btn-width body-text btn-info">ESO Solutions</a>
+            <hr>
+            <h1 class="body-header">Midwest</h1>
+            <p class="body-text">To Access Midwest Paylink, click on the button below.
+                <ul>
+                    <li class="body-text">Pay Stubs</li>
+                    <li class="body-text">Time Keeping</li>
+                    <li class="body-text">W-2s</li>
+                </ul>
+            </p>
+            <a href="https://www.midwestpaylink.com" class="btn btn-info btn-width body-text">Midwest Paylink</a>
+            <hr>
+            <h1 class="body-header">FireHouse</h1>
+            <p class="body-text">To Access Firehouse webpage, click on the button below.
+                <ul>
+                    <li class="body-text">Incident Reports</li>
+                    <li class="body-text">Maintenance</li>
+                </ul>
+            </p>
+            <a href="http://cloud1.firehousesoftware.com/ky/campbell/" class="btn btn-info btn-width body-text">FireHouse Software</a>
+        </div>
     </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </body>
 
 </html>
