--- a/join.html
+++ b/join.html
@@ -54,7 +54,7 @@
                 <!-- <a href="" class="nav-item-link">smart 911</a> -->
                 <!-- </li> -->
                 <!-- make this info on the home page because it links to an external site -->
-                <a href="" class="nav-item-link">
+                <a href="member-portal.html" class="nav-item-link">
                     <li class="nav-item">
                         Members Portal
                     </li>
