made custom button class for all buttons

--- a/home.html
+++ b/home.html
@@ -79,7 +79,7 @@
                 <p class="lead body-text">"When a man becomes a fireman his greatest act of bravery has been accomplished. What he does after that is all in the line of work."</p>
                 <p>-Chief Edward F. Croker</p>
                 <p class="lead body-text">
-                    <a class="btn btn-warning btn-lg" href="contract.html" role="button">Contact Us</a>
+                    <a class="btn btn-warning btn-lg btn-custom" href="contract.html" role="button">Contact Us</a>
                 </p>
             </div>
 
@@ -89,7 +89,7 @@
                         <div class="card-body">
                             <h5 class="card-title body-header">Interested in Volunteering?</h5>
                             <p class="card-text body-text">Fill our the form below and return it to one of our stations!</p>
-                            <a href="documents/membershipApplication.pdf" download class="btn btn-danger">Download File</a>
+                            <a href="documents/membershipApplication.pdf" download class="btn btn-danger btn-custom">Download File</a>
                         </div>
                     </div>
 
@@ -97,7 +97,7 @@
                         <div class="card-body">
                             <h5 class="card-title body-header">Public Education</h5>
                             <p class="card-text body-text">Click on the link below for the latest information on COVID-19 and other important information!</p>
-                            <a href="documents/membershipApplication.pdf" download class="btn btn-danger">Public Ed. Link</a>
+                            <a href="documents/membershipApplication.pdf" download class="btn btn-danger btn-custom">Public Ed. Link</a>
                         </div>
                     </div>
 
@@ -123,7 +123,7 @@
                             <h5 class="card-title body-header">Smart911</h5>
                             <p class="card-text body-text">Consider signing up for Smart911. When you call 911 after signing up, the 911 operators will be able to automatically view essential information such as your address, medical information, or home information. You can provide
                                 as much or as little information as you want.</p>
-                            <a href="https://www.smart911.com/" class="btn btn-danger">Smart911 Link</a>
+                            <a href="https://www.smart911.com/" class="btn btn-danger btn-custom">Smart911 Link</a>
                         </div>
                     </div>
 
@@ -131,7 +131,7 @@
                         <div class="card-body">
                             <h5 class="card-title body-header">Wanting a Job?</h5>
                             <p class="card-text body-text">Fill our the form below and enjoy a career of serving the community!</p>
-                            <a href="documents/employmentApplication.pdf" download class="btn btn-danger">Download File</a>
+                            <a href="documents/employmentApplication.pdf" download class="btn btn-danger btn-custom">Download File</a>
                         </div>
                     </div>
                 </div>
