--- a/join.html
+++ b/join.html
@@ -78,7 +78,7 @@
                     <div class="card">
                         <div class="card-body">
                             <h5 class="card-title body-header">Volunteer Form</h5>
-                            <a href="documents/membershipApplication.pdf" download class="btn btn-danger body-text btn-w">Download File</a>
+                            <a href="documents/membershipApplication.pdf" download class="btn btn-custom btn-danger body-text btn-w">Download File</a>
                         </div>
                     </div>
                 </div>
@@ -87,7 +87,7 @@
                     <div class="card">
                         <div class="card-body">
                             <h5 class="card-title body-header">Employment Form</h5>
-                            <a href="documents/employmentApplication.pdf" download class="btn btn-danger body-text btn-w">Download File</a>
+                            <a href="documents/employmentApplication.pdf" download class="btn btn-danger body-text btn-w btn-custom">Download File</a>
                         </div>
                     </div>
                 </div>
