--- a/member-portal.html
+++ b/member-portal.html
@@ -77,7 +77,7 @@
                     <li class="body-text">Email</li>
                 </ul>
             </p>
-            <a href="https://www.office.com" class="btn btn-info btn-width body-text">Office Link</a>
+            <a href="https://www.office.com" class="btn btn-info btn-width body-text btn-custom">Office Link</a>
             <hr>
             <h1 class="body-header">ESO</h1>
             <p class="body-text">To Access ESO EMS Solutions webpage, click on the button below.
@@ -85,7 +85,7 @@
                     <li class="body-text">EMS Reporting</li>
                 </ul>
             </p>
-            <a href="http://www.esosuite.net" class="btn btn-width body-text btn-info">ESO Solutions</a>
+            <a href="http://www.esosuite.net" class="btn btn-width body-text btn-info btn-custom">ESO Solutions</a>
             <hr>
             <h1 class="body-header">Midwest</h1>
             <p class="body-text">To Access Midwest Paylink, click on the button below.
@@ -95,7 +95,7 @@
                     <li class="body-text">W-2s</li>
                 </ul>
             </p>
-            <a href="https://www.midwestpaylink.com" class="btn btn-info btn-width body-text">Midwest Paylink</a>
+            <a href="https://www.midwestpaylink.com" class="btn btn-danger btn-width body-text btn-custom">Midwest Paylink</a>
             <hr>
             <h1 class="body-header">FireHouse</h1>
             <p class="body-text">To Access Firehouse webpage, click on the button below.
@@ -104,7 +104,7 @@
                     <li class="body-text">Maintenance</li>
                 </ul>
             </p>
-            <a href="http://cloud1.firehousesoftware.com/ky/campbell/" class="btn btn-info btn-width body-text">FireHouse Software</a>
+            <a href="http://cloud1.firehousesoftware.com/ky/campbell/" class="btn btn-info btn-width body-text btn-custom">FireHouse Software</a>
         </div>
     </div>
 </body>
