--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
                         About
                     </li>
                 </a>
-                <a href="burn-permits.html" class="nav-item-link">
+                <a href="https://8ea89a5c-3a40-453d-9ea1-ea967c6b06da.filesusr.com/ugd/148a41_c3addeda3b8f4b8b9feb0ec2765e216f.pdf" class="nav-item-link">
                     <li class="nav-item">
                         Burn Permits
                     </li>
